--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,12 +5,16 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
+    "aiosqlite>=0.21.0",
     "fastapi>=0.124.4",
+    "greenlet>=3.3.0",
     "httpx>=0.28.1",
+    "psycopg[binary]>=3.3.2",
     "pytest>=9.0.2",
     "pytest-cov>=7.0.0",
     "questionary>=2.1.1",
     "rich>=14.2.0",
+    "sqlmodel>=0.0.27",
     "typer>=0.20.0",
     "uvicorn>=0.38.0",
 ]
