feat: finish tasks ui integration

--- a/.env.example
+++ b/.env.example
@@ -1,1 +1,3 @@
-DATABASE_URL=postgresql+psycopg://user:password@host:5432/dbname
+UV_PYTHON=python3.13
+UV_CACHE_DIR=/home/aie/all_data/piaic71-hackathon-v2/.uv-cache
+DATABASE_URL=postgresql://<your-user>:<your-pass>@<host>/<db>?sslmode=require&channel_binding=require
