--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,4 @@
+# Auth + Tasks: env template
 BETTER_AUTH_SECRET=replace-with-shared-secret
 NEXT_PUBLIC_BETTER_AUTH_TOKEN=eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJzdWIiOiJkZW1vLXVzZXIiLCJleHAiOjE3NjU3NTk4OTl9.QreuSKchyPGZEKAEJSRP4xGqxjZVLuwZ0q0jc2S9P0o
 NEXT_PUBLIC_BACKEND_URL=http://localhost:8000
@@ -6,4 +7,4 @@ UV_CACHE_DIR=.uv-cache
 BACKEND_PORT=8000
 FRONTEND_PORT=3000
 DATABASE_URL=postgresql://neondb_owner:password@host:port/dbname?sslmode=require&channel_binding=require
-RUN_DB_TESTS=0
+RUN_DB_TESTS=0  # set to 1 to run DB integration tests
