--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,8 @@ dependencies = [
     "fastapi>=0.124.4",
     "greenlet>=3.3.0",
     "httpx>=0.28.1",
+    "passlib[bcrypt]>=1.7.4",
+    "bcrypt>=4.1.2,<5.0.0",
     "psycopg[binary]>=3.3.2",
     "pytest>=9.0.2",
     "pytest-cov>=7.0.0",
