--- a/vercel.json
+++ b/vercel.json
@@ -1,8 +1,7 @@
 {
   "version": 2,
   "framework": "nextjs",
-  "rootDirectory": "frontend",
-  "installCommand": "npm install",
-  "buildCommand": "npm run build",
-  "outputDirectory": ".next"
+  "installCommand": "npm install --prefix frontend",
+  "buildCommand": "npm run build --prefix frontend",
+  "outputDirectory": "frontend/.next"
 }
