docs: simplify README and document CORS env

--- a/.env.example
+++ b/.env.example
@@ -1,10 +1,19 @@
-# Auth + Tasks: env template
+# TaskBoard env template
+#
+# Backend
 BETTER_AUTH_SECRET=replace-with-shared-secret
-NEXT_PUBLIC_BETTER_AUTH_TOKEN=eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJzdWIiOiJkZW1vLXVzZXIiLCJleHAiOjE3NjU3NTk4OTl9.QreuSKchyPGZEKAEJSRP4xGqxjZVLuwZ0q0jc2S9P0o
+DATABASE_URL=postgresql://neondb_owner:password@host:port/dbname?sslmode=require&channel_binding=require
+
+# Backend CORS: set this to the *frontend origin* (no trailing slash) when deploying.
+# Example: https://piaic71-hackathon-v2-frontend.vercel.app
+NEXT_PUBLIC_API_BASE_URL=http://localhost:3000
+
+# Frontend: base URL of the backend (no trailing slash)
 NEXT_PUBLIC_BACKEND_URL=http://localhost:8000
+
+# Optional: script helpers
 UV_PYTHON=python3.13
 UV_CACHE_DIR=.uv-cache
 BACKEND_PORT=8000
 FRONTEND_PORT=3000
-DATABASE_URL=postgresql://neondb_owner:password@host:port/dbname?sslmode=require&channel_binding=require
-RUN_DB_TESTS=0  # set to 1 to run DB integration tests
+RUN_DB_TESTS=0
