fix: configurable CORS origins and bootstrap env

--- a/.env.example
+++ b/.env.example
@@ -4,9 +4,9 @@
 BETTER_AUTH_SECRET=replace-with-shared-secret
 DATABASE_URL=postgresql://neondb_owner:password@host:port/dbname?sslmode=require&channel_binding=require
 
-# Backend CORS: set this to the *frontend origin* (no trailing slash) when deploying.
+# Backend CORS: allowed *frontend origins* (comma-separated, no trailing slash).
 # Example: https://piaic71-hackathon-v2-frontend.vercel.app
-NEXT_PUBLIC_API_BASE_URL=http://localhost:3000
+CORS_ALLOWED_ORIGINS=http://localhost:3000
 
 # Frontend: base URL of the backend (no trailing slash)
 NEXT_PUBLIC_BACKEND_URL=http://localhost:8000
