--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,9 @@ venv/
 .coverage
 dist/
 *.egg-info/
+/.vercel/
+.env.local
+frontend/.vercel/
 frontend/.next/
 frontend/node_modules/
 frontend/.turbo/
