Implement agent tool calls

--- a/.env.example
+++ b/.env.example
@@ -3,6 +3,11 @@
 # Backend
 BETTER_AUTH_SECRET=replace-with-shared-secret
 DATABASE_URL=postgresql://neondb_owner:password@host:port/dbname?sslmode=require&channel_binding=require
+CHAT_MODEL_PROVIDER=openai
+CHAT_MODEL_NAME=gpt-4o-mini
+CHAT_HISTORY_LIMIT=50
+OPENAI_API_KEY=sk-your-openai-key
+GEMINI_API_KEY=your-gemini-key
 
 # Backend CORS: allowed *frontend origins* (comma-separated, no trailing slash).
 # Example: https://piaic71-hackathon-v2-frontend.vercel.app
