feat: add MCP server and client integration

--- a/.env.example
+++ b/.env.example
@@ -8,6 +8,7 @@ CHAT_MODEL_NAME=gpt-4o-mini
 CHAT_HISTORY_LIMIT=50
 OPENAI_API_KEY=sk-your-openai-key
 GEMINI_API_KEY=your-gemini-key
+MCP_SERVER_URL=http://localhost:9000
 
 # Backend CORS: allowed *frontend origins* (comma-separated, no trailing slash).
 # Example: https://piaic71-hackathon-v2-frontend.vercel.app
