Add chat UI spec and scaffolding

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,6 +9,7 @@
     "test": "vitest run"
   },
   "dependencies": {
+    "@openai/chatkit": "^1.2.0",
     "next": "canary",
     "react": "18.3.0",
     "react-dom": "18.3.0"
